add integrative metabolomics

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ social:
   skype: skype:jpark432?call
   google: https://scholar.google.com/citations?user=9qHkdoYAAAAJ&hl=en
   #google-plus-square: https://plus.google.com/u/0/+<username>
-  linkedin-square: https://linkedin.com/in/jun-park-63004826
+  linkedin-square: https://linkedin.com/in/jopark432
   github: https://github.com/jopark
   #facebook-official: https://facebook.com/<username>
   #flickr:
