--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: Jun Park
 description: |
   From integrative metabolomics  
   to understanding human diseases  
-  & enhancing CO<sub>2</sub> fixation  
+  & enhancing CO<sub>2</sub> utilization  
 owner: Junyoung O. Park
 first_published: 2017 # if migrating another site, the year of your first publish
 email: jopark@mit.edu
