--- a/_config.yml
+++ b/_config.yml
@@ -2,19 +2,19 @@
 #
 
 # Site settings
-title: Jun Park
+title: Park Lab
 description: |
   From integrative metabolomics  
   to understanding human diseases  
   & enhancing CO<sub>2</sub> utilization  
 owner: Junyoung O. Park
 first_published: 2017 # if migrating another site, the year of your first publish
-email: jopark@mit.edu
+email: jop@ucla.edu
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://jopark.github.io" # the base hostname & protocol for your site
+url: "https://jopark.github.com" # the base hostname & protocol for your site
 social:
   #twitter: https://twitter.com/<username>
-  email: mailto:jopark@mit.edu
+  email: mailto:jop@ucla.edu
   phone: tel:2016613970
   skype: skype:jpark432?call
   google: https://scholar.google.com/citations?user=9qHkdoYAAAAJ&hl=en
