--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: |
   From integrative metabolomics  
   to understanding human diseases  
   & enhancing CO<sub>2</sub> utilization  
-owner: Junyoung O. Park
+owner: Jun Park
 first_published: 2017 # if migrating another site, the year of your first publish
 email: jop@ucla.edu
 baseurl: "" # the subpath of your site, e.g. /blog
